--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-pandas~=1.2.2
-requests~=2.25.1
-python-dotenv~=0.15.0
-timeloop~=1.0.2
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+numpy==1.20.1
+pandas==1.2.2
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+pytz==2021.1
+requests==2.25.1
+six==1.15.0
+slack-sdk==3.4.0
+timeloop==1.0.2
+urllib3==1.26.3
