implemented regex filtering for better search notifications and automated messaging (post sniping), added tests

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+deployment.xml
+webServers.xml
+gpu-scraper.iml
 
 # Generated files
 .idea/**/contentModel.xml
