--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+attrs==20.3.0
 certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
+iniconfig==1.1.1
 numpy==1.20.1
+packaging==20.9
 pandas==1.2.2
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2021.1
+regex==2020.11.13
 requests==2.25.1
 six==1.15.0
 slack-sdk==3.4.0
 timeloop==1.0.2
+toml==0.10.2
 urllib3==1.26.3
